src/views/User/UserProfile/Placeholder/styles.module.css
.followButton,
.moreButton {
  background: var(--color-grey-lighter);
  border-radius: 2.5rem;
}

.followButton {
  width: 5.3125rem;
  height: 2rem;
}

.moreButton {
  width: 2rem;
  height: 2rem;
}

.description {
  width: 100%;
  height: 1rem;
  background: var(--color-grey-lighter);

  &:first-child {
    width: 50%;
  }

  & + & {
    margin-top: var(--spacing-x-tight);
  }
}

